recursion.cons.reverse.Reverse.scala.error
Erreur de compilation :
Reverse:6: error: too many arguments for method reverse: (l: List[Int])List[Int]
      case h::q => reverse(q, h::r)
                          ^Reverse:9: error: type mismatch;
 found   : Unit
 required: List[Int]
} 
^